--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.13.2",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
+    "tailwindcss": "^4",
+    "typescript": "5.9.3"
   }
 }
