--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.12",
     "next": "15.5.9",
     "react": "19.1.0",
